@@ -85,6 +85,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
         0 or 16 or 32.  Likewise for ERF_DONT_STRIP_FCS (either 0 or 1).
       Remove FCS quirks specific to 4.2S and 4.23S.
       Fix packet filtering with low snaplen.
+      Fix ps_drop for stream drop counters.
     SNF:
       Fix packet filtering with low snaplen.
 
